<?xml version="1.0"?>
<package format="2">
  <name>robotnik_joint_state_publisher</name>
  <version>0.0.0</version>
  <description>The robotnik_joint_state_publisher package</description>

  <maintainer email="aarnal@robotnik.es">aarnal</maintainer>


  <license>BSD</license>
  
  <author email="aarnal@robotnik.es">Alejandro Arnal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rcomponent</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rcomponent</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rcomponent</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
