<?xml version="1.0"?>
<package format="2">
  <name>gps_filter</name>
  <version>0.1.0</version>
  <description>The gps_filter package, based on RComponent structure. </description>

  <maintainer email="jmnavarrete@robotnik.es">Juan Manuel N.C</maintainer>

  <author email="jmnavarrete@robotnik.es">Juan Manuel N.C</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rcomponent</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>

  </export>
</package>
