<?xml version="1.0"?>
<package format="2">
  <name>rbkairos_advanced_sim</name>
  <version>1.0.0</version>
  <description>The rbkairos_advanced_sim package</description>

  <author email="aarnal@robotnik.es">Alejandro Arnal</author>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
