<?xml version="1.0"?>
<package format="2">
  <name>robotnik_urcap_bridge_msgs</name>
  <version>0.0.0</version>
  <description>The robotnik_urcap_bridge_msgs package</description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>

  <license>BSD</license>

  <author email="aarnal@robotnik.es">Alejandro Arnal</author>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <export>
  </export>
</package>
