<?xml version="1.0"?>
<package format="2">
  <name>node_manager</name>
  <version>0.0.0</version>
  <description>The node_manager package</description>

  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ping_time_monitor</build_depend>
  <build_depend>rosmon_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>ping_time_monitor</build_export_depend>
  <build_export_depend>rosmon_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ping_time_monitor</exec_depend>
  <exec_depend>rosmon_msgs</exec_depend>


  <export>
  </export>

</package>
