<?xml version="1.0"?>
<package format="2">
  <name>robotnik_laser_filters</name>
  <version>0.0.0</version>
  <description>The robotnik_laser_filters package</description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal Espinola</maintainer>


  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>filters</build_export_depend>
  <build_export_depend>laser_filters</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>filters</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <filters plugin="${prefix}/robotnik_laser_filters_plugins.xml"/>

  </export>
</package>
