<?xml version="1.0"?>
<package>
  <name>summit_xl_robot</name>
  <version>1.0.0</version>
  <description>Contains the robot hardware controller, robot status web server and robot bringup folder</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/SummitXL</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_robot/issues</url>

  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
