<?xml version="1.0"?>
<package format="3">
  <name>lslidar_c16_driver</name>
  <version>1.0.0</version>

  <maintainer email="tongsky723@sina.com">tongsky</maintainer>
  <author>Yutong</author>
  <license>BSD</license>
  <description>
    ROS device driver for Leishen C16 lidar.
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend condition="$ROS_DISTRO == melodic">rslidar_input</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>lslidar_c16_msgs</build_depend>


  <exec_depend>angles</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>lslidar_c16_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_lslidar_c16.xml"/>

  </export>

</package>
