<package format="3">
  <name>rostful</name>
  <version>0.0.2</version>
  <description>
      REST API for ROS
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/RobotnikAutomation/rostful</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rostful/issues</url>

  <author>Ben Kehoe</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>rosmon</exec_depend>
  <exec_depend>robot_local_control_msgs</exec_depend>
  <exec_depend>rcomponent</exec_depend>

  <!-- these dependencies are only for testing -->
  <exec_depend>python-yaml</exec_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>

  <!-- documentation dependencies -->
	<build_depend condition="$ROS_DISTRO == melodic">python-catkin-pkg</build_depend>
	<build_depend condition="$ROS_DISTRO == noetic">python3-catkin-pkg</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
