<?xml version="1.0"?>
<package>
  <name>rbrobout_description</name>
  <version>1.1.3</version>
  <description> URDF description of the RB-Robout base </description>

  <author email="avillena@robotnik.es">Álvaro Villena</author>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotnik_sensors</run_depend>

</package>
